# OpenLoci

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: hugo.toml  ssg-decision.md
docs/content/: _index.md  contributing.md  palace-structure.md  philosophy.md  quick-start.md
docs/content/skins/: _index.md  authoring.md
docs/layouts/: index.html
docs/layouts/partials/: header.html  sidebar.html
docs/static/: CNAME
docs/themes/palace/: theme.toml
docs/themes/palace/layouts/: index.html
docs/themes/palace/layouts/_default/: baseof.html  list.html  single.html  taxonomy.html
docs/themes/palace/layouts/page/: single.html
docs/themes/palace/layouts/partials/: footer.html  head.html  header.html  sidebar.html
docs/themes/palace/layouts/partials/widgets/: taxcloud-sidebar.html
docs/themes/palace/static/css/: main.css
docs/themes/palace/static/css/skins/: default.css  xfiles.css
src/openloci/: __init__.py  cli.py  generator.py  skins.py
templates/skins/clue/: cookiecutter.json  skin.json
templates/skins/clue/{{cookiecutter.palace_name}}/The Vestibule/: README.md
templates/skins/clue/{{cookiecutter.palace_name}}/The Vestibule/Characters/: ceo_col_mustard.md  cmo_mrs_peacock.md  col_mustard.md  coo_mr_green.md  cro_miss_scarlett.md  cso_prof_plum.md  cto_mrs_white.md  miss_scarlett.md  mr_green.md  mrs_peacock.md  mrs_white.md  prof_plum.md
templates/skins/clue/{{cookiecutter.palace_name}}/The Vestibule/Principles/: master_prompt.md
templates/skins/digitalcircus/: cookiecutter.json  skin.json
templates/skins/digitalcircus/{{cookiecutter.palace_name}}/: Makefile
templates/skins/digitalcircus/{{cookiecutter.palace_name}}/The Vestibule/: README.md
templates/skins/muppets/: cookiecutter.json  skin.json
templates/skins/muppets/{{cookiecutter.palace_name}}/The Vestibule/: README.md
templates/skins/siliconvalley/: cookiecutter.json  skin.json
templates/skins/siliconvalley/{{cookiecutter.palace_name}}/The Vestibule/: README.md
templates/skins/sv/: cookiecutter.json  skin.json
templates/skins/xfiles/: cookiecutter.json  skin.json
templates/skins/xfiles/{{cookiecutter.palace_name}}/The Vestibule/: README.md
tests/: conftest.py  test_skins.py
(+54 files in other folders)
